manifest/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - image: registrykrd5328.azurecr.io/tripinsights/poi:latest
        name: poi
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "akv-openhack"
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: poi
