manifest/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - image: registrykrd5328.azurecr.io/tripinsights/trips:latest
        name: trips
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
          - containerPort: 80
            name: http
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: ingress-basic
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: trips
