manifest/tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer 
  namespace: web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripviewer
